[tool.poetry]
name = "stock-fast-api"
version = "1.4.0"
description = ""
authors = ["seria <seria.ati@gmail.com>"]
license = "GPL-v3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
tortoise-orm = "^0.21.0"
fake-useragent = "^1.4.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
seria-library = {git = "https://github.com/seriaati/seria-library"}
aiohttp-client-cache = {extras = ["sqlite"], version = "^0.11.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
